--- a/docroot/sites/default/config/staging/core.entity_form_display.mapping.personify_product.default.yml
+++ b/docroot/sites/default/config/staging/core.entity_form_display.mapping.personify_product.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.mapping.personify_product.field_price_available_from
     - field.field.mapping.personify_product.field_price_available_to
     - field.field.mapping.personify_product.field_product_code
+    - field.field.mapping.personify_product.field_product_code_nonm
     - field.field.mapping.personify_product.field_productid
     - field.field.mapping.personify_product.field_session_length
     - field.field.mapping.personify_product.field_special_member_price
@@ -23,7 +24,7 @@ bundle: personify_product
 mode: default
 content:
   field_location_ref:
-    weight: 15
+    weight: 8
     settings:
       match_operator: CONTAINS
       size: 60
@@ -31,78 +32,85 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
   field_member_price:
-    weight: 16
+    weight: 9
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
   field_nonmember_price:
-    weight: 17
+    weight: 10
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
   field_package:
-    weight: 14
+    weight: 7
     settings: {  }
     third_party_settings: {  }
     type: options_select
   field_price_available_from:
-    weight: 18
+    weight: 11
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
   field_price_available_to:
-    weight: 19
+    weight: 12
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
   field_product_code:
-    weight: 12
+    weight: 4
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
+  field_product_code_nonm:
+    type: string_textfield
+    weight: 5
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   field_productid:
-    weight: 11
+    weight: 3
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
   field_session_length:
-    weight: 13
+    weight: 6
     settings: {  }
     third_party_settings: {  }
     type: options_select
   field_special_member_price:
-    weight: 20
+    weight: 13
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
   field_special_non_member_price:
-    weight: 21
+    weight: 14
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
   langcode:
     type: language_select
-    weight: 10
+    weight: 2
     settings: {  }
     third_party_settings: {  }
   name:
     type: string_textfield
-    weight: -4
+    weight: 0
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
   user_id:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 1
     settings:
       match_operator: CONTAINS
       size: 60
