--- a/docroot/sites/default/config/staging/core.entity_view_display.mapping.personify_product.default.yml
+++ b/docroot/sites/default/config/staging/core.entity_view_display.mapping.personify_product.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.mapping.personify_product.field_price_available_from
     - field.field.mapping.personify_product.field_price_available_to
     - field.field.mapping.personify_product.field_product_code
+    - field.field.mapping.personify_product.field_product_code_nonm
     - field.field.mapping.personify_product.field_productid
     - field.field.mapping.personify_product.field_session_length
     - field.field.mapping.personify_product.field_special_member_price
@@ -25,14 +26,14 @@ bundle: personify_product
 mode: default
 content:
   field_location_ref:
-    weight: 5
+    weight: 7
     label: above
     settings:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
   field_member_price:
-    weight: 6
+    weight: 8
     label: above
     settings:
       thousand_separator: ''
@@ -42,7 +43,7 @@ content:
     third_party_settings: {  }
     type: number_decimal
   field_nonmember_price:
-    weight: 7
+    weight: 9
     label: above
     settings:
       thousand_separator: ''
@@ -52,13 +53,13 @@ content:
     third_party_settings: {  }
     type: number_decimal
   field_package:
-    weight: 4
+    weight: 6
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
   field_price_available_from:
-    weight: 8
+    weight: 10
     label: above
     settings:
       format_type: medium
@@ -66,7 +67,7 @@ content:
     third_party_settings: {  }
     type: datetime_default
   field_price_available_to:
-    weight: 9
+    weight: 11
     label: above
     settings:
       format_type: medium
@@ -74,27 +75,34 @@ content:
     third_party_settings: {  }
     type: datetime_default
   field_product_code:
+    weight: 3
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+  field_product_code_nonm:
+    type: string
+    weight: 4
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+  field_productid:
     weight: 2
     label: above
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
-  field_productid:
-    weight: 1
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
   field_session_length:
-    weight: 3
+    weight: 5
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
   field_special_member_price:
-    weight: 10
+    weight: 12
     label: above
     settings:
       thousand_separator: ''
@@ -104,7 +112,7 @@ content:
     third_party_settings: {  }
     type: number_decimal
   field_special_non_member_price:
-    weight: 11
+    weight: 13
     label: above
     settings:
       thousand_separator: ''
@@ -116,14 +124,14 @@ content:
   name:
     label: above
     type: string
-    weight: -4
+    weight: 0
     settings:
       link_to_entity: false
     third_party_settings: {  }
   user_id:
     label: hidden
     type: author
-    weight: 0
+    weight: 1
     settings: {  }
     third_party_settings: {  }
 hidden: {  }
