--- a/docroot/sites/default/config/staging/field.field.mapping.personify_product.field_product_code_nonm.yml
+++ b/docroot/sites/default/config/staging/field.field.mapping.personify_product.field_product_code_nonm.yml
@@ -1,15 +1,15 @@
-uuid: 494bda1e-e4e6-416d-8a1a-a3215ce3e820
+uuid: f20ec540-a1a7-451f-8223-f816f67d2f65
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.mapping.field_product_code
+    - field.storage.mapping.field_product_code_nonm
     - ymca_mappings.mapping_type.personify_product
-id: mapping.personify_product.field_product_code
-field_name: field_product_code
+id: mapping.personify_product.field_product_code_nonm
+field_name: field_product_code_nonm
 entity_type: mapping
 bundle: personify_product
-label: 'Member product code'
+label: 'Non-member product code'
 description: ''
 required: false
 translatable: false
