--- a/docroot/sites/default/config/staging/views.view.personify_product_mapping.yml
+++ b/docroot/sites/default/config/staging/views.view.personify_product_mapping.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.storage.mapping.field_nonmember_price
     - field.storage.mapping.field_package
     - field.storage.mapping.field_product_code
+    - field.storage.mapping.field_product_code_nonm
     - field.storage.mapping.field_productid
     - field.storage.mapping.field_session_length
     - ymca_mappings.mapping_type.personify_product
@@ -213,7 +214,70 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: ProductCode
+          label: 'Member product code'
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+        field_product_code_nonm:
+          id: field_product_code_nonm
+          table: mapping__field_product_code_nonm
+          field: field_product_code_nonm
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: 'Non-member product code'
           exclude: false
           alter:
             alter_text: false
@@ -780,11 +844,53 @@ display:
           exposed: true
           expose:
             operator_id: field_product_code_value_op
-            label: 'Product Code'
+            label: 'Member product code'
             description: ''
             use_operator: false
             operator: field_product_code_value_op
             identifier: field_product_code_value
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              editor: '0'
+              location_editor: '0'
+              contributor: '0'
+              intern: '0'
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: string
+        field_product_code_nonm_value:
+          id: field_product_code_nonm_value
+          table: mapping__field_product_code_nonm
+          field: field_product_code_nonm_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '='
+          value: ''
+          group: 1
+          exposed: true
+          expose:
+            operator_id: field_product_code_nonm_value_op
+            label: 'Non-member product code'
+            description: ''
+            use_operator: false
+            operator: field_product_code_nonm_value_op
+            identifier: field_product_code_nonm_value
             required: false
             remember: false
             multiple: false
@@ -968,6 +1074,7 @@ display:
         - 'config:field.storage.mapping.field_nonmember_price'
         - 'config:field.storage.mapping.field_package'
         - 'config:field.storage.mapping.field_product_code'
+        - 'config:field.storage.mapping.field_product_code_nonm'
         - 'config:field.storage.mapping.field_productid'
         - 'config:field.storage.mapping.field_session_length'
   page_1:
@@ -1008,5 +1115,6 @@ display:
         - 'config:field.storage.mapping.field_nonmember_price'
         - 'config:field.storage.mapping.field_package'
         - 'config:field.storage.mapping.field_product_code'
+        - 'config:field.storage.mapping.field_product_code_nonm'
         - 'config:field.storage.mapping.field_productid'
         - 'config:field.storage.mapping.field_session_length'
