--- a/modules/openy_features/openy_taxonomy/config/install/views.view.taxonomy_term.yml
+++ b/modules/openy_features/openy_taxonomy/config/install/views.view.taxonomy_term.yml
@@ -48,12 +48,12 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
-        type: mini
+        type: full
         options:
-          items_per_page: 10
+          items_per_page: 9
           offset: 0
           id: 0
-          total_pages: 0
+          total_pages: null
           expose:
             items_per_page: false
             items_per_page_label: 'Items per page'
@@ -63,8 +63,11 @@ display:
             offset: false
             offset_label: Offset
           tags:
-            previous: ‹‹
-            next: ››
+            previous: '‹ Previous'
+            next: 'Next ›'
+            first: '« First'
+            last: 'Last »'
+          quantity: 9
       sorts:
         sticky:
           id: sticky
