--- a/field.field.node.branch.field_branch_body.yml
+++ b/field.field.node.branch.field_branch_body.yml
@@ -15,6 +15,7 @@ dependencies:
     - paragraphs.paragraphs_type.gallery
     - paragraphs.paragraphs_type.group_schedules
     - paragraphs.paragraphs_type.latest_news_and_updates
+    - paragraphs.paragraphs_type.location_events
     - paragraphs.paragraphs_type.panorama
     - paragraphs.paragraphs_type.simple_content
     - paragraphs.paragraphs_type.small_banner
@@ -50,6 +51,7 @@ settings:
       small_banner: small_banner
       panorama: panorama
       group_schedules: group_schedules
+      location_events: location_events
     target_bundles_drag_drop:
       2c:
         enabled: true
@@ -132,6 +134,9 @@ settings:
       group_schedules:
         enabled: true
         weight: 46
+      location_events:
+        enabled: true
+        weight: 50
       membership_info:
         weight: 51
         enabled: false
