--- a/openy_node_branch.info.yml
+++ b/openy_node_branch.info.yml
@@ -20,6 +20,7 @@ dependencies:
   - openy_gallery
   - openy_latest_news
   - openy_location_core
+  - openy_location_events
   - openy_node
   - openy_node_mbrshp
   - openy_prgf_1c
@@ -46,4 +47,4 @@ dependencies:
   - text
   - user
   - views
-version: 8.x-1.6
+version: 8.x-1.7
