--- a/ygh_programs_search.services.yml
+++ b/ygh_programs_search.services.yml
@@ -8,3 +8,6 @@ services:
   ygh_programs_search.data_storage:
     class: Drupal\ygh_programs_search\DataStorage
     arguments: ['@daxko.client', '@ygh_programs_search.cache', '@http_client', '@ygh_programs_search.crawler']
+    tags:
+      -
+        name: openy_cron_service
