--- a/modules/custom/openy_mappings/openy_mappings.links.menu.yml
+++ b/modules/custom/openy_mappings/openy_mappings.links.menu.yml
@@ -3,7 +3,7 @@ entity.mapping.collection:
   title: 'Mapping list'
   route_name: entity.mapping.collection
   description: 'List Mapping entities'
-  parent: openy_alters.admin_config_entities
+  parent: system.admin_structure
   weight: 100
 
 # Mapping type menu items definition
@@ -11,5 +11,5 @@ entity.mapping_type.collection:
   title: 'Mapping type'
   route_name: entity.mapping_type.collection
   description: 'List Mapping type (bundles)'
-  parent: openy_alters.admin_config_entities
+  parent: system.admin_structure
   weight: 99
