--- a/docroot/modules/features/digital_signage_promotional_block/config/install/core.entity_form_display.block_content.digital_signage_promotional.default.yml
+++ b/docroot/modules/features/digital_signage_promotional_block/config/install/core.entity_form_display.block_content.digital_signage_promotional.default.yml
@@ -3,7 +3,7 @@ status: true
 dependencies:
   config:
     - block_content.type.digital_signage_promotional
-    - entity_browser.browser.browse_files_modal
+    - entity_browser.browser.images_library
     - field.field.block_content.digital_signage_promotional.field_ds_background_color
     - field.field.block_content.digital_signage_promotional.field_ds_background_image
     - field.field.block_content.digital_signage_promotional.field_ds_background_position
@@ -78,7 +78,7 @@ content:
   field_ds_background_image:
     weight: 6
     settings:
-      entity_browser: browse_files_modal
+      entity_browser: images_library
       field_widget_display: label
       field_widget_edit: true
       field_widget_remove: true
