--- a/docroot/modules/features/digital_signage_promotional_block/config/install/field.field.block_content.digital_signage_promotional.field_ds_background_position.yml
+++ b/docroot/modules/features/digital_signage_promotional_block/config/install/field.field.block_content.digital_signage_promotional.field_ds_background_position.yml
@@ -11,7 +11,7 @@ field_name: field_ds_background_position
 entity_type: block_content
 bundle: digital_signage_promotional
 label: 'Background image position'
-description: ''
+description: 'Provide a position for the image of background.'
 required: true
 translatable: false
 default_value:
