--- a/docroot/modules/custom/ymca_camp_du_nord/ymca_camp_du_nord.libraries.yml
+++ b/docroot/modules/custom/ymca_camp_du_nord/ymca_camp_du_nord.libraries.yml
@@ -1,8 +1,10 @@
 cdn:
+  version: 8.0.1
   js:
     js/ymca_cdn_calendar.js: {}
   dependencies:
     - core/jquery
+    - core/jquery.once
     - core/drupal
     - core/drupalSettings
     - fullcalendar/drupal.fullcalendar.js
