--- a/composer.json
+++ b/composer.json
@@ -171,9 +171,9 @@
     },
     "require": {
         "php": ">=5.6",
-        "cweagans/composer-patches": "^1.5.*",
-        "composer/installers": "^1.*",
-        "drupal-composer/drupal-scaffold": "^2.0.0",
+        "cweagans/composer-patches": "1.5.*",
+        "composer/installers": "1.*",
+        "drupal-composer/drupal-scaffold": "2.0.*",
         "drupal/core": "8.4.*",
         "drupal/features": "3.*",
         "drupal/confi": "1.4",
