--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "emuse/behat-html-formatter": "^0.1.0",
         "integratedexperts/behat-screenshot": "^0.6.2",
         "drupal/tqextension": "dev-drupal-8",
-        "consolidation/robo": "^1.1.5"
+        "consolidation/robo": "1.*"
     },
     "config": {
         "bin-dir": "bin/",
@@ -173,7 +173,7 @@
         "php": ">=5.6",
         "cweagans/composer-patches": "1.5.*",
         "composer/installers": "1.*",
-        "drupal-composer/drupal-scaffold": "2.0.*",
+        "drupal-composer/drupal-scaffold": "2.*",
         "drupal/core": "8.4.*",
         "drupal/features": "3.*",
         "drupal/confi": "1.4",
