--- a/composer.json
+++ b/composer.json
@@ -146,6 +146,7 @@
             "docroot/themes/contrib/{$name}": ["type:drupal-theme"],
             "docroot/libraries/{$name}": ["type:drupal-library"]
         },
+        "composer-exit-on-patch-failure": false,
         "patches": {
             "drupal/simple_menu_icons": {
                 "2847964 - Clear cache after simple_menu_icons_css_generate": "https://www.drupal.org/files/issues/clear-cache-after-simple_menu_icons_css_generate-2847964.patch",
@@ -170,7 +171,7 @@
         }
     },
     "require": {
-        "php": ">=5.6",
+        "php": ">=5.6 <7.2",
         "cweagans/composer-patches": "1.5.*",
         "composer/installers": "1.*",
         "drupal-composer/drupal-scaffold": "2.*",
